REGRESSION(r208886) Web Inspector: Toggling CSS Properties in Styles Sidebar (comment / uncomment) https://bugs.webkit.org/show_bug.cgi?id=166786 <rdar://problem/29767412>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-01-06
Reviewed by Brian Burg.

* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyle::populateAllProperties):
Match earlier behavior and don't send the frontend information about
disabled (commented out) properties. Follow-up later to send this
information when implementing proper handling of them in the frontend.

Canonical link: https://commits.webkit.org/183923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210472 268f45cc-cd09-0410-ab3c-d52691b4dbfc